--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
