--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@uiw/codemirror-theme-vscode": "^4.22.0",
+    "@uiw/react-codemirror": "^4.22.0",
     "firebase": "^10.8.1",
     "next": "14.1.3",
     "react": "^18",
