--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@uiw/codemirror-theme-vscode": "^4.22.0",
     "@uiw/react-codemirror": "^4.22.0",
+    "assert": "^2.1.0",
     "firebase": "^10.8.1",
     "next": "14.1.3",
     "react": "^18",
